third_party/jerryscript/jerryscript/tests/jerry/fail/1/object-get-get.js
// SPDX-FileCopyrightText: 2014-2015 Samsung Electronics Co., Ltd.
// SPDX-License-Identifier: Apache-2.0

var a = {get a() {return undefined}, get a() {return undefined}}
